# market-research-agent-python-app

./: .dockerignore  .env.example  .gitignore  .overnight-dev.json  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
assets/: styles.css
bolt-upload/: 00-bolt-starting-prompt.md  01-form-fields.md  02-agent-prompts.md  03-research-persona.md
docs/plans/: 2026-02-14-principal-engineer-improvements.md
src/: __init__.py  agents.py  export.py  models.py  orchestrator.py  schemas.py  source_checker.py
tests/: test_agents.py  test_api_integration.py  test_export.py  test_orchestrator.py  test_placeholder.py  test_research_brief.py  test_schemas.py  test_source_checker.py
