[project]
name = "market-research-app"
version = "0.1.0"
description = "AI-powered market research agent with Streamlit UI"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
